--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -2,14 +2,13 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
-  <title>Feathers chat login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
+  <title>Houman Hadian's Doctoral Project @ualg / Instagram Credentials </title>
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="//cdn.rawgit.com/feathersjs/feathers-chat/v0.2.0/public/base.css">
-  <link rel="stylesheet" href="//cdn.rawgit.com/feathersjs/feathers-chat/v0.2.0/public/chat.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/app.css">
 </head>
-
 <body>
 <div id="app" class="flex flex-column">
   <main class="login container">
