-Finalizing the circuit for ETL apis and FeathersJS apis plus rendering and piping results via rest and realtime endpoints

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -7,83 +7,83 @@
   <div class="center-text">
     <ul class="endpoints">
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/profile?houmanproject">Get user profile</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/profile?houmanproject">Get user profile</a>
+        <!--<a  href="http://localhost:3003/api/instagram/profile?houmanproject">Get user profile</a>-->
+        <a  href="http://localhost:8080/instagram/profile?houmanproject">Get user profile</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/whoami">Get logged in user</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/whoami">Get logged in user</a>
+        <!--<a  href="http://localhost:3003/api/instagram/whoami">Get logged in user</a>-->
+        <a  href="http://localhost:8080/instagram/whoami">Get logged in user</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/posts?username=adidas">Get user recent posts</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/posts?username=adidas">Get user recent posts</a>
+        <!--<a  href="http://localhost:3003/api/instagram/posts?username=adidas">Get user recent posts</a>-->
+        <a  href="http://localhost:8080/instagram/posts?username=adidas">Get user recent posts</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/allposts?username=adidas">Get user all posts</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/allposts?username=adidas">Get user all posts</a>
+        <!--<a  href="http://localhost:3003/api/instagram/allposts?username=adidas">Get user all posts</a>-->
+        <a  href="http://localhost:8080/instagram/allposts?username=adidas">Get user all posts</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>
+        <!--<a  href="http://localhost:3003/api/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>-->
+        <a  href="http://localhost:8080/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/explore/location?location=tehran&count=50">Explore by location</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/explore/location?location=tehran&count=50">Explore by location</a>
+        <!--<a  href="http://localhost:3003/api/instagram/explore/location?location=tehran&count=50">Explore by location</a>-->
+        <a  href="http://localhost:8080/instagram/explore/location?location=tehran&count=50">Explore by location</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/following?username=adidas&count=50">Get user's followings</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/following?username=adidas&count=50">Get user's followings</a>
+        <!--<a  href="http://localhost:3003/api/instagram/following?username=adidas&count=50">Get user's followings</a>-->
+        <a  href="http://localhost:8080/instagram/following?username=adidas&count=50">Get user's followings</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/followers?username=adidas&count=120">Get user followers</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/followers?username=adidas&count=120">Get user followers</a>
+        <!--<a  href="http://localhost:3003/api/instagram/followers?username=adidas&count=120">Get user followers</a>-->
+        <a  href="http://localhost:8080/instagram/followers?username=adidas&count=120">Get user followers</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/search?query=instagram">Search Instagram</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/search?query=instagram">Search Instagram</a>
+        <!--<a  href="http://localhost:3003/api/instagram/search?query=instagram">Search Instagram</a>-->
+        <a  href="http://localhost:8080/instagram/search?query=instagram">Search Instagram</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/feed?count=15">Get feed</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/feed?count=15">Get feed</a>
+        <!--<a  href="http://localhost:3003/api/instagram/feed?count=15">Get feed</a>-->
+        <a  href="http://localhost:8080/instagram/feed?count=15">Get feed</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/likes?shortcode=Bu1FtB-gxhE&count=65">Get post likes</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/likes?shortcode=Bu1FtB-gxhE&count=65">Get post likes</a>
+        <!--<a  href="http://localhost:3003/api/instagram/likes?shortcode=Bu1FtB-gxhE&count=65">Get post likes</a>-->
+        <a  href="http://localhost:8080/instagram/likes?shortcode=Bu1FtB-gxhE&count=65">Get post likes</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/comments?shortcode=Bu6dTjrFnI-&count=165">Get post comments</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/comments?shortcode=Bu6dTjrFnI-&count=165">Get post comments</a>
+        <!--<a  href="http://localhost:3003/api/instagram/comments?shortcode=Bu6dTjrFnI-&count=165">Get post comments</a>-->
+        <a  href="http://localhost:8080/instagram/comments?shortcode=Bu6dTjrFnI-&count=165">Get post comments</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/post?shortcode=Bu6dTjrFnI-">Get post</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/post?shortcode=Bu6dTjrFnI-">Get post</a>
+        <!--<a  href="http://localhost:3003/api/instagram/post?shortcode=Bu6dTjrFnI-">Get post</a>-->
+        <a  href="http://localhost:8080/instagram/post?shortcode=Bu6dTjrFnI-">Get post</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" target="_blank" href="http://localhost:3003/api/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>-->
-        <a target="_blank" target="_blank" href="http://localhost:8080/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>
+        <!--<a   href="http://localhost:3003/api/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>-->
+        <a   href="http://localhost:8080/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/suggested/posts?count=20">Get suggested posts</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/suggested/posts?count=20">Get suggested posts</a>
+        <!--<a  href="http://localhost:3003/api/instagram/suggested/posts?count=20">Get suggested posts</a>-->
+        <a  href="http://localhost:8080/instagram/suggested/posts?count=20">Get suggested posts</a>
         <br/>
       </li>
       <li>
-        <!--<a target="_blank" href="http://localhost:3003/api/instagram/suggested/people?count=20">Get suggested people</a>-->
-        <a target="_blank" href="http://localhost:8080/instagram/suggested/people?count=20">Get suggested people</a>
+        <!--<a  href="http://localhost:3003/api/instagram/suggested/people?count=20">Get suggested people</a>-->
+        <a  href="http://localhost:8080/instagram/suggested/people?count=20">Get suggested people</a>
         <br/>
       </li>
     </ul>
