-Corrections on EJS views and finalizing them - Adding whoami endpoint to front end cycle

--- a/src/views/layout-home.ejs
+++ b/src/views/layout-home.ejs
@@ -4,7 +4,7 @@
   <%- include layout-header.ejs %>
 </head>
 <body>
-  <%- include ./pages/index.ejs %>
+  <%- include ./pages/home.ejs %>
   <%- include layout-footer.ejs %>
 </body>
 </html>
