--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,7 @@ html, body {
 main {
   margin-top: 20px;
   padding: 20px;
+  margin-left: 200px;
 }
 
 img.logo {
@@ -27,10 +28,16 @@ img.logo {
   margin-bottom: 30px;
 }
 img.UAlglogo {
-  display: block;
+  display: inline-block;
+  /* position: fixed; */
+  left: 0px;
+  /* width: 200px; */
+  /* left: 36px; */
   margin: 0 auto;
+  bottom: 0;
   max-width: 121px;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
+  z-index: 1;
 }
 h2 {
   font-size: 2em;
@@ -80,9 +87,135 @@ a:focus {
 .endpoints{
   display:inline-block;
   columns: 4;
+  list-style: none;
   -webkit-columns: 4;
   -moz-columns: 4;
 }
 .endpoints li{
   text-align: left;
+}
+/* The sidepanel menu */
+.sidepanel {
+  height: 100%; /* Specify a height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  left: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidepanel */
+}
+
+/* The sidepanel links */
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidepanel a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style the button that is used to open the sidepanel */
+.instabtn {
+  width: 200px;
+  min-width: 4%;
+  height: 50px;
+  position: fixed;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  top: 0;
+  padding: 10px 15px;
+  border: none;
+}
+
+.instabtn:hover {
+  background-color: #444;
+}
+.data-form {
+  /* width: 180px; */
+  /* height: 9%; */
+  display: grid;
+}
+.form-container{
+  position: fixed;
+  background-color: #e4e4e4;
+  height: 100%;
+  width: 200px;
+  min-width: 4%;
+  padding: 10px;
+  left: 0px;
+  top: 50px;
+  float: left;
+  display: inline-block;
+}
+#links-container{
+  width:100%;
+  display:inline-block;
+}
+#content-container{
+  width:100%;
+}
+#footer-container{
+  margin-top: 20px;
+  padding: 20px;
+  margin-left: 200px;
+}
+.endpoint-button{
+  background-color: #fff2e8;
+  border: none;
+  /* width: 250px; */
+  padding: 5px;
+  cursor: pointer;
+  margin: 3px;
+  /* list-style: none; */
+}
+.endpoint-button:hover{
+  background-color: #f99447;
+
+}
+.logo-footer{
+  position: fixed;
+  background-color: #020101;
+  width: 200px;
+  /* height: 20px; */
+  left: 0;
+  z-index: 2;
+  bottom: 0;
+}
+.loader{
+  margin: 0 0 2em;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  padding: 1em;
+  margin: 0 auto 1em;
+  display: inline-block;
+  vertical-align: top;
+}
+
+/*
+  Set the color of the icon
+*/
+svg path,
+svg rect{
+  fill: #FF6700;
 }
