- Adding posts and allposts functionalities - Correcting posts view to accept both array and single item - Correcting and handling arrays on Featherjs create service

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -43,13 +43,13 @@
           <br/>
         </li>
         <li>
-          <input class="endpoint-button" type="button"  value="Explore by tag" onClick=getEndpoint("http://localhost:8080/instagram/explore/tag?",'tag-explore')>
+          <input class="endpoint-button" type="button"  value="Explore by tag" onClick=getEndpoint("http://localhost:8080/instagram/explore/tag?",'tag-posts')>
           <!--<a  href="http://localhost:3003/api/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>-->
           <!--<a  href="http://localhost:8080/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>-->
           <br/>
         </li>
         <li>
-          <input class="endpoint-button" type="button"  value="Explore by location" onClick=getEndpoint("http://localhost:8080/instagram/explore/location?",'location-explore')>
+          <input class="endpoint-button" type="button"  value="Explore by location" onClick=getEndpoint("http://localhost:8080/instagram/explore/location?",'location-posts')>
           <!--<a  href="http://localhost:3003/api/instagram/explore/location?location=tehran&count=50">Explore by location</a>-->
           <!--<a  href="http://localhost:8080/instagram/explore/location?location=tehran&count=50">Explore by location</a>-->
           <br/>
