--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
-<button class="instabtn" onclick="openNav('sidepanel-login')">&#9776; ig</button>
+<button class="instabtn" onclick="openNav('sidepanel-login')">&#9776; Instagram </button>
 <!--<button class="twitrbtn" onclick="openNav()">&#9776; tw</button>-->
 <div id="app" class="flex flex-column">
   <main class="login container">
