--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -27,8 +27,8 @@
 </div>
 
 <div class="row">
-  <% if(!(typeof edges == 'undefined')){ console.log('we got data here...')%>
-    <% edges.forEach((edge) => { %>
+  <% if(!(typeof etlData.edge_owner_to_timeline_media.edges == 'undefined')){ console.log('we got data here...')%>
+  <% etlData.edge_owner_to_timeline_media.edges.forEach((edge) => { %>
     <% edge = edge.node %>
     <% if(edge.owner.id === etlData.id) { %>
 
