--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -18,7 +18,9 @@
           </a>
 
           <p class="yellowStars">
-            <% if(edge.edge_media_preview_like.count) { %><%=edge.edge_media_preview_like.count+' '%> &starf; <% } %>
+            <%if(edge.edge_media_preview_like){%>
+              <% if(edge.edge_media_preview_like.count) { %><%=edge.edge_media_preview_like.count+' '%> &starf; <% } %>
+            <%}else{ %><%=edge.edge_liked_by.count+' '%> &starf; <%}%>
           </p>
           <% if (edge.owner){%>
             <% if(edge.owner.id==userid) { %>
