--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -41,7 +41,7 @@
 </div>
 <div class="sidepanel" id="sidepanel-login">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('sidepanel-login')">&times;</a>
-  <%- include ../pages/instagram/sessions/new.ejs %>
+  <%- include ../pages/iglogin.ejs %>
 </div>
 <%- include ../layout-footer.ejs %>
 </body>
