--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -97,17 +97,17 @@
           <br/>
         </li>
         <li>
-          <input class="endpoint-button" type="button"  value="Get post media" onClick=getEndpoint("href=\"http://localhost:8080/instagram/post?",'post-json')>
+          <input class="endpoint-button" type="button"  value="Get post media" onClick=getEndpoint("http://localhost:8080/instagram/post?",'post-json')>
           <!--<a  href="http://localhost:3003/api/instagram/post?shortcode=Bu6dTjrFnI-">Get post</a>-->
           <!--<a  href="http://localhost:8080/instagram/post?shortcode=Bu6dTjrFnI-">Get post media</a>-->
           <br/>
         </li>
-        <li>
+     <!--   <li>
           <input class="endpoint-button" type="button"  value="Get post HTML page" onClick=getEndpoint("http://localhost:8080/instagram/post/page?",'post-page')>
-          <!--<a   href="http://localhost:3003/api/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>-->
-          <!--<a   href="http://localhost:8080/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>-->
+          &lt;!&ndash;<a   href="http://localhost:3003/api/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>&ndash;&gt;
+          &lt;!&ndash;<a   href="http://localhost:8080/instagram/post/page?shortcode=Bu6dTjrFnI-">Get post HTML page</a>&ndash;&gt;
           <br/>
-        </li>
+        </li>-->
         <li>
           <input class="endpoint-button" type="button"  value="Get suggested posts" onClick=getEndpoint("http://localhost:8080/instagram/suggested/posts?",'sugg-posts')>
           <!--<a  href="http://localhost:3003/api/instagram/suggested/posts?count=20">Get suggested posts</a>-->
@@ -120,7 +120,7 @@
           <!--<a  href="http://localhost:8080/instagram/suggested/people?count=20">Get suggested people</a>-->
           <br/>
         </li>
-        <li>
+<!--        <li>
           <input class="endpoint-button" type="button"  value="Get posts engagement" onClick=getEndpoint("http://localhost:8080/instagram/engagement/posts?",'eng-posts')>
           <br/>
         </li>
@@ -131,7 +131,7 @@
         <li>
           <input class="endpoint-button" type="button"  value="Get location engagement" onClick=getEndpoint("http://localhost:8080/instagram/engagement/locations?",'eng-locations')>
           <br/>
-        </li>
+        </li>-->
       </ul>
     </div>
   </div>
