--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -45,7 +45,7 @@
             </a>
 
             <p class="yellowStars">
-              <% while(edge.edge_liked_by--) { %> &starf; <% } %>
+              <% while(edge.edge_liked_by--) { %> &hearts; <% } %>
             </p>
 
             <% if(edge.owner.id === etlData.id) { %>
