--- a/src/views/pages/people.ejs
+++ b/src/views/pages/people.ejs
@@ -1,6 +1,6 @@
 <% if(!(typeof etlData.edges == 'undefined')){ console.log('we got data here...')%>
   <% etlData.edges.forEach((edge) => { %>
-  <% edge = edge.node %>
+  <% edge = edge.node.user %>
   <div class="row whiteBox ">
 
     <div class="col-sm-6 text-center align-self-center">
