--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ img.logo {
   max-width: 100%;
   margin-bottom: 30px;
 }
+
 img.UAlglogo {
   display: inline-block;
   /* position: fixed; */
@@ -39,6 +40,7 @@ img.UAlglogo {
   /* margin-bottom: 30px; */
   z-index: 1;
 }
+
 h2 {
   font-size: 2em;
   font-weight: 100;
@@ -84,16 +86,19 @@ a:focus {
   text-align: center;
   white-space: nowrap;
 }
-.endpoints{
-  display:inline-block;
+
+.endpoints {
+  display: inline-block;
   columns: 4;
   list-style: none;
   -webkit-columns: 4;
   -moz-columns: 4;
 }
-.endpoints li{
+
+.endpoints li {
   text-align: left;
 }
+
 /* The sidepanel menu */
 .sidepanel {
   height: 100%; /* Specify a height */
@@ -135,7 +140,7 @@ a:focus {
 /* Style the button that is used to open the sidepanel */
 .instabtn {
   width: 200px;
-  min-width: 4%;
+  min-width: 12%;
   height: 50px;
   position: fixed;
   font-size: 20px;
@@ -150,36 +155,42 @@ a:focus {
 .instabtn:hover {
   background-color: #444;
 }
+
 .data-form {
   /* width: 180px; */
   /* height: 9%; */
   display: grid;
 }
-.form-container{
+
+.form-container {
   position: fixed;
   background-color: #e4e4e4;
   height: 100%;
   width: 200px;
-  min-width: 4%;
+  min-width: 12%;
   padding: 10px;
   left: 0px;
   top: 50px;
   float: left;
   display: inline-block;
 }
-#links-container{
-  width:100%;
-  display:inline-block;
+
+#links-container {
+  width: 100%;
+  display: inline-block;
 }
-#content-container{
-  width:100%;
+
+#content-container {
+  width: 100%;
 }
-#footer-container{
+
+#footer-container {
   margin-top: 20px;
   padding: 20px;
   margin-left: 200px;
 }
-.endpoint-button{
+
+.endpoint-button {
   background-color: #fff2e8;
   border: none;
   /* width: 250px; */
@@ -188,20 +199,24 @@ a:focus {
   margin: 3px;
   /* list-style: none; */
 }
-.endpoint-button:hover{
+
+.endpoint-button:hover {
   background-color: #f99447;
 
 }
-.logo-footer{
+
+.logo-footer {
   position: fixed;
   background-color: #020101;
   width: 200px;
+  min-width: 12%;
   /* height: 20px; */
   left: 0;
   z-index: 2;
   bottom: 0;
 }
-.loader{
+
+.loader {
   margin: 0 0 2em;
   height: 100%;
   width: 100%;
@@ -216,6 +231,125 @@ a:focus {
   Set the color of the icon
 */
 svg path,
-svg rect{
+svg rect {
   fill: #FF6700;
+}
+
+/*this is text*/
+
+
+body {
+  font-family: Karla, sans-serif;
+  background-color: #fafafa;
+  height: 100vh
+}
+
+input {
+  font-family: Karla, sans-serif;
+  /*background-color: #fafafa*/
+}
+
+a:link {
+  text-decoration: none
+}
+
+a {
+  color: #003569;
+  font-weight: 700
+}
+
+#main {
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  text-align: center
+}
+
+footer {
+  height: 60px;
+  line-height: 60px;
+  margin-top: 20px;
+  bottom: 0;
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+  background-color: #fff
+}
+
+footer .heart {
+  color: #cf2e31
+}
+
+#comments {
+  margin: 10px 0
+}
+
+#leaveComment {
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  margin: 15px 0;
+  padding: 15px
+}
+
+#phones {
+  margin-top: 20px
+}
+
+a {
+  text-decoration: none
+}
+
+
+
+img {
+  margin: 5px 0
+}
+
+.jimbo {
+  height: auto;
+  line-height: auto;
+  background-position: center;
+  background-size: cover;
+  background-color: #aa000b;
+  text-align: center;
+  color: #fff
+}
+
+.img-thumbnail {
+  background: #003569;
+  border: none
+}
+
+.navbar {
+  border-bottom: 1px solid #e6e6e6
+}
+
+.btn {
+  margin: 10px
+}
+
+.card {
+  margin: 15px 0 0 0;
+  text-align: center
+}
+
+.card-header {
+  font-weight: 700
+}
+
+.whiteBox {
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  padding: 15px;
+  margin: 15px
+}
+
+.likes-comments {
+  color: gold;
+  font-size: 1.5em
+}
+
+@media screen and (max-width: 768px) {
+  #phones {
+    display: none
+  }
 }
