--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -16,12 +16,19 @@
           <a href="/edges/<%= edge.id %>">
             <img class="img-fluid" src="<%= edge.thumbnail_src %>" alt="<%= edge.edge_media_to_caption? edge.edge_media_to_caption.edges[0]:[] %>">
           </a>
+          <div class="likes-comments">
+              <span style="color: rgb(249,5,5);">
+                <%if(edge.edge_media_preview_like){%>
+                  <% if(edge.edge_media_preview_like.count) { %><%=edge.edge_media_preview_like.count+' '%> &hearts; <% } %>
+                <%}else{ %><%=edge.edge_liked_by.count+' '%> &hearts; <%}%>
+              </span>
+            <span style="color: transparent;  text-shadow: 0 0 0 rgb(42, 170, 82);">
+              <%if(edge.edge_media_to_comment){%>
+              <%=edge.edge_media_to_comment.count+' '%> &#x1F5E8;
+              <%} %>
+            </span>
 
-          <p class="yellowStars">
-            <%if(edge.edge_media_preview_like){%>
-              <% if(edge.edge_media_preview_like.count) { %><%=edge.edge_media_preview_like.count+' '%> &hearts; <% } %>
-            <%}else{ %><%=edge.edge_liked_by.count+' '%> &hearts; <%}%>
-          </p>
+          </div>
           <% if (edge.owner){%>
             <% if(edge.owner.id==userid) { %>
 
