-Implementing sample data loading

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -14,6 +14,7 @@
         Short code: <input type="text" id="shortcode-input" short-code="short-code"><br>
         Count: <input type="number" id="count-input" count=0><br>
       </form>
+      <input value="Load sample data" type="button" onClick=getEndpoint("http://localhost:8080/instagram/form/data?",'form-data')>
     </div>
     <div class="center-text" id="links-container">
       <ul class="endpoints">
